--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "API Gateway authorizer lambda for mighty-runner",
   "main": "index.js",
   "scripts": {
-    "coverage": "nyc npm run test",
-    "package": "npm ci && npm prune --production && zip -r ./infrastructure/authorizer-lambda.zip . -x *.git* -x *.nyc_output* -x infrastructure\\* && npm i",
+    "coverage": "nyc yarn test",
+    "package": "yarn && yarn install --production && zip -r ./infrastructure/authorizer-lambda.zip . -x *.git* -x *.nyc_output*  -x coverage\\* -x infrastructure\\* && yarn",
     "postinstall": "cp ./pre-push-hook .git/hooks/pre-push",
-    "tdd": "npm run test -- --watch",
+    "tdd": "yarn test --watch",
     "test": "mocha ./**/*.test.js"
   },
   "repository": {
@@ -24,7 +24,7 @@
     "aws-sdk": "2.439.0",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
-    "mocha": "6.1.3",
+    "mocha": "6.2.0",
     "nyc": "14.0.0",
     "rewire": "4.0.1",
     "sinon": "7.3.2",
